services/service-nginx-elb.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
    tier: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  # Creates an AWS ELB
  type: LoadBalancer
  # For security, you can permit connections only from certain source CIDR ranges
  loadBalancerSourceRanges:
    - 0.0.0.0/0
